--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
                             class="img-fluid" alt="Easily">
                     </div>
                     <div class="col-lg-6 col-sm-12 detail text-start">
-                        <h3>Song : Easily</h3>
-                        <h3>Artist : Bruno Major</h3>
-                        <p class="fs-4">"Don’t you tell me that it wasn’t meant to be Call it quits, call it destiny
+                        <h1><b>Easily</b></h1>
+                        <p class="fs-4 mb-2 mt-4"><b>Artist:</b> Bruno Major</p>
+                        <p class="fs-4"><b>Description:</b> "Don’t you tell me that it wasn’t meant to be Call it quits, call it destiny
                             Just because it
                             won’t come easily Doesn’t mean we shouldn’t try"</p>
                     </div>
@@ -261,9 +261,9 @@
                             class="img-fluid" alt="Beautiful">
                     </div>
                     <div class="col-lg-6 col-sm-12 detail text-start">
-                        <h3>Song : Beautiful</h3>
-                        <h3>Artist : Crush</h3>
-                        <p class="fs-4">"It's a beautiful life, beautiful day 미치도록 널 사랑했었던 날 Beautiful life, beautiful
+                        <h1><b>Beautiful</b></h1>
+                        <p class="fs-4 mb-2 mt-4"><b>Artist:</b> Crush</p>
+                        <p class="fs-4"><b>Description:</b> "It's a beautiful life, beautiful day 미치도록 널 사랑했었던 날 Beautiful life, beautiful
                             day 너를 잃고 싶지 않아
                             Beautiful my love Beautiful your heart It's a beautiful life"</p>
                     </div>
@@ -274,9 +274,9 @@
                             class="img-fluid" alt="Ethernal Frame">
                     </div>
                     <div class="col-lg-6 col-sm-12 detail text-start">
-                        <h3>Song : Ethernal Frame</h3>
-                        <h3>Artist : Atomic Kitten</h3>
-                        <p class="fs-4">"Close your eyes, give me your hand, darling Do you feel my heart beating? Do
+                        <h1><b>Ethernal Frame</b></h1>
+                        <p class="fs-4 mb-2 mt-4"><b>Artist:</b> Atomic Kitten</p>
+                        <p class="fs-4"><b>Description:</b> "Close your eyes, give me your hand, darling Do you feel my heart beating? Do
                             you understand? Do
                             you feel the same? Am I only dreaming? Is this burning an eternal flame?"</p>
                     </div>
@@ -287,9 +287,9 @@
                             class="img-fluid" alt="หลอก">
                     </div>
                     <div class="col-lg-6 col-sm-12 detail text-start">
-                        <h3>Song : หลอก</h3>
-                        <h3>Artist : NICECNX</h3>
-                        <p class="fs-4">"สุดท้ายแล้วเธอไม่โกหก แต่ลืมบอกกันว่าไม่รัก ฉันโดนหลอก เธอบอกกันเธอใจร้าย
+                        <h1><b>หลอก</b></h1>
+                        <p class="fs-4 mb-2 mt-4"><b>Artist:</b> NICECNX</p>
+                        <p class="fs-4"><b>Description:</b> "สุดท้ายแล้วเธอไม่โกหก แต่ลืมบอกกันว่าไม่รัก ฉันโดนหลอก เธอบอกกันเธอใจร้าย
                             สุดท้ายแล้วเป็นไง เธอทิ้งตัวฉันไป แต่อันที่จริงฉันไม่รักเธออยู่แล้ว"</p>
                     </div>
                 </div>
@@ -299,9 +299,9 @@
                             class="img-fluid" alt="จี่หอย">
                     </div>
                     <div class="col-lg-6 col-sm-12 detail text-start">
-                        <h3>Song : จี่หอย</h3>
-                        <h3>Artist : พี สะเดิด</h3>
-                        <p class="fs-4">"เลาะเลียบตามแคบน้ำ แคมหนอง ก็มีของกินเป็นอาหาร หอยปากกว้าง นั่นหล่ะโตการ
+                        <h1><b>จี่หอย</b></h1>
+                        <p class="fs-4 mb-2 mt-4"><b>Artist:</b> พี สะเดิด</p>
+                        <p class="fs-4"><b>Description:</b> "เลาะเลียบตามแคบน้ำ แคมหนอง ก็มีของกินเป็นอาหาร หอยปากกว้าง นั่นหล่ะโตการ
                             มันเป็นโตมาร กัดกกข้าวในนา มันเป็นโตมาร กัดกกข้าวในนา"</p>
                     </div>
                 </div>
@@ -312,9 +312,9 @@
                     </div>
 
                     <div class="col-lg-6 col-sm-12 detail text-start">
-                        <h3>Song : เกินต้าน</h3>
-                        <h3>Artist : PIXXIE</h3>
-                        <p class="fs-4">"ก็เธอน่ารักจนเกินต้านขนาดนี้ จะรักคนคนนี้ เพราะคนอื่น ก็สู้เธอไม่ได้หรอก
+                        <h1><b>เกินต้าน</b></h1>
+                        <p class="fs-4 mb-2 mt-4"><b>Artist:</b> PIXXIE</p>
+                        <p class="fs-4"><b>Description:</b> "ก็เธอน่ารักจนเกินต้านขนาดนี้ จะรักคนคนนี้ เพราะคนอื่น ก็สู้เธอไม่ได้หรอก
                             มองทีไรก็น่ารักและสดใส คงต้านเธอไม่ไหว ฉันคงไปรักคนอื่น ไม่ได้หรอก"</p>
                     </div>
                 </div>
